--- a/cod/style.css
+++ b/cod/style.css
@@ -1,30 +1,10 @@
-header {
-        background-color: #444;
-        padding: 10px;
-    }
-    
-    .logo {
-        display: flex;
-        align-items: center;
-        color: white;
-    }
-    
-    .logo i {
-        margin-right: 5px;
-        font-size: 20px;
-    }
-    
-    .logo h1 {
-        margin: 0;
-        font-size: 18px;
-    }
-
-#tituloCabecalho{
-    color: white;
-}
-#iconLogo{
-    color: red;
-}
 body{
-    background-color: black;
+    background-color: black !important;
+}
+#cabecalho{
+    background-color: #444 !important
+}
+#Titulo{
+    color: white ;
+    font-size: 30px;
 }
